--- a/server_side/.gitignore
+++ b/server_side/.gitignore
@@ -128,3 +128,8 @@ dist
 .yarn/build-state.yml
 .yarn/install-state.gz
 .pnp.*
+
+# image resources
+public/category
+public/posters
+public/products
