Refactor user references and update UI components
- Updated profile picture in admin panel.
- Changed username from "DrDisagree" to "Jundullah" in multiple screens.
- Modified Android app namespace and application ID from "com.drdisagree.nexara_cart" to "com.Jundullah.nexara_cart".
- Enhanced error handling and success messages in registration and cart functionalities.
- Implemented stock validation before order submission in the backend.
- Added Docker support for backend services with MongoDB.
- Improved Snackbar helper for better user feedback.

--- a/client_side/nexara_cart/android/app/build.gradle
+++ b/client_side/nexara_cart/android/app/build.gradle
@@ -24,7 +24,7 @@ if (flutterVersionName == null) {
 }
 
 android {
-    namespace = "com.drdisagree.nexara_cart"
+    namespace = "com.Jundullah.nexara_cart"
     compileSdk = flutter.compileSdkVersion
     ndkVersion = flutter.ndkVersion
 
@@ -34,12 +34,12 @@ android {
     }
 
     defaultConfig {
-        applicationId = "com.drdisagree.nexara_cart"
+        applicationId = "com.Jundullah.nexara_cart"
         minSdk = flutter.minSdkVersion
         targetSdk = flutter.targetSdkVersion
         versionCode = flutterVersionCode.toInteger()
         versionName = flutterVersionName
-        minSdkVersion 23
+        minSdkVersion flutter.minSdkVersion
     }
 
     buildTypes {
