Update .gitignore to include additional Android build outputs and Gradle wrapper files

--- a/client_side/nexara_cart/android/.gitignore
+++ b/client_side/nexara_cart/android/.gitignore
@@ -14,4 +14,18 @@ key.properties
 
 /app/google-services.json
 
-gradle-7.*/**
+# Android Studio
+.gradle/
+local.properties
+.idea/
+*.iml
+
+# Android build outputs
+**/build/
+**/captures/
+*.apk
+*.ap_
+*.aab
+
+# Gradle wrapper zip (this was your large file)
+**/gradle/wrapper/gradle-*-all.zip
